tests/mtls-ocsp-crl-revocation/manifests/dnsingress-ocsp.yaml
apiVersion: psc.example.com/v1
kind: DnsIngress
metadata:
  name: req050-ocsp-mtls
  namespace: req050-gateway
spec:
  hostname: req050-ocsp.${RHCL_ZONE_ROOT_DOMAIN}
  ingressClass: nginx
